--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/core": "^10.4.15",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/typeorm": "^10.0.2",
+    "@tavily/core": "^0.5.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "openai": "^5.12.2",
