--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "lint": "eslint .",
     "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -d src/data-source.ts src/migrations/auto",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d src/data-source.ts",
-    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d src/data-source.ts"
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d src/data-source.ts",
+    "backfill:logos": "ts-node src/scripts/backfill-logos-to-r2.ts",
+    "backfill:logos:dry": "ts-node src/scripts/backfill-logos-to-r2.ts -- --dry-run"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.873.0",
     "@clerk/backend": "^1.9.0",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^4.0.2",
@@ -26,8 +29,10 @@
     "@tavily/core": "^0.5.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "docx": "^9.5.1",
     "openai": "^5.12.2",
     "pg": "^8.12.0",
+    "puppeteer": "^24.17.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
