chore: remove obsolete ESLint configuration and environment variables documentation
- Deleted .eslintrc.json in favor of a new eslint.config.js for improved configuration management.
- Removed ENVIRONMENT_VARIABLES.md as the environment variable setup is no longer applicable.
- Added new scripts for fetching and cleaning technology roles, enhancing role management capabilities.
- Introduced Elasticsearch service for improved search functionality within the roles module.
- Updated roles service to utilize Elasticsearch for role searching, providing a more efficient search experience.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d src/data-source.ts",
     "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d src/data-source.ts",
     "backfill:logos": "ts-node src/scripts/backfill-logos-to-r2.ts",
-    "backfill:logos:dry": "ts-node src/scripts/backfill-logos-to-r2.ts -- --dry-run"
+    "backfill:logos:dry": "ts-node src/scripts/backfill-logos-to-r2.ts -- --dry-run",
+    "fetch:roles": "ts-node src/scripts/fetch-software-engineer-roles.ts",
+    "fetch:tech-roles": "ts-node src/scripts/fetch-tech-roles.ts",
+    "roles:clean": "ts-node src/scripts/clean-tech-roles.ts",
+    "roles:push": "ts-node src/scripts/push-roles.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.873.0",
@@ -31,6 +35,7 @@
     "class-validator": "^0.14.1",
     "docx": "^9.5.1",
     "openai": "^5.12.2",
+    "@openrouter/api": "^1.10.0",
     "pg": "^8.12.0",
     "puppeteer": "^24.17.0",
     "reflect-metadata": "^0.2.2",
