--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "docx": "^9.5.1",
+    "ioredis": "^5.3.2",
     "openai": "^5.12.2",
     "pg": "^8.12.0",
     "puppeteer": "^24.17.0",
