--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "class-validator": "^0.14.1",
     "docx": "^9.5.1",
     "ioredis": "^5.3.2",
+    "jsonrepair": "^3.13.0",
     "openai": "^5.12.2",
+    "jsonrepair": "^3.7.0",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.12.0",
     "puppeteer": "^24.17.0",
     "reflect-metadata": "^0.2.2",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/pdf-parse": "^1.1.5",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
     "eslint": "^9.4.0",
