feat(platforms): implement user-platform mapping features
- Added user-platform mapping endpoints in PlatformsController for listing, adding, updating, and deleting user-specific platforms.
- Enhanced PlatformsService to manage user-platform relationships, including upsert and ensure functionality.
- Updated platforms module to include UserPlatform entity for tracking user-specific platform data.
- Modified ApplicationsService to ensure user platforms are created or updated when applications are saved.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "fetch:roles": "ts-node src/scripts/fetch-software-engineer-roles.ts",
     "fetch:tech-roles": "ts-node src/scripts/fetch-tech-roles.ts",
     "roles:clean": "ts-node src/scripts/clean-tech-roles.ts",
-    "roles:push": "ts-node src/scripts/push-roles.ts"
+    "roles:push": "ts-node src/scripts/push-roles.ts",
+    "cleanup:companies": "ts-node src/scripts/cleanup-company-names-and-logos.ts -- --yes",
+    "cleanup:companies:dry": "ts-node src/scripts/cleanup-company-names-and-logos.ts -- --dry-run"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.873.0",
