--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/typeorm": "^10.0.2",
     "@tavily/core": "^0.5.10",
+    "bullmq": "^5.58.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "docx": "^9.5.1",
+    "googleapis": "^159.0.0",
     "ioredis": "^5.3.2",
-    "jsonrepair": "^3.13.0",
-    "openai": "^5.12.2",
     "jsonrepair": "^3.7.0",
+    "openai": "^5.12.2",
     "pdf-parse": "^1.1.1",
     "pg": "^8.12.0",
     "puppeteer": "^24.17.0",
