--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.873.0",
     "@clerk/backend": "^1.9.0",
+    "@copilotkit/runtime": "^1.10.3",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.4.15",
